# cs2-realmap-generator

./: .gitignore  LICENSE  README.md
audits/: AUDIT_COMPLET_2026-06-17.md
data/: country_codes.json
src/: classifiers.py  country_codes.py  cs2_zones.py  download_zoning_legacy.js  extract_zoning.py  extract_zoning.py.before-args-fix  extract_zoning.py.before-official-pack  extract_zoning.py.before-split-layers  extract_zoning.py.before-water-layers  overpass_client.py  pyproject.toml  road_categories.py  service_families.py
src/Roads/: RoadImportMetadata.cs  RoadPrefabResolver.cs  RuntimeRoadSpawner.cs
tests/: test_country_codes.py  test_manifest_invariants.py  test_redact_secrets.py  test_road_categories.py  test_service_families.py
tools/: analyze_zoning_data.py  analyze_zoning_data_v2.py  clip_existing_pack_to_bbox.py  clip_to_heightmap_bbox.py  diagnose_zoning_js.py  export_cs2_pngs.py  export_heightmap_from_dem.py  export_road_subsets.py  export_terrain_rgb_png.py  export_worldmap_png.py  gen_country_codes_js.py  sync_vertical_contract.py  validate_png_contract.py  write_cs2_bundle_manifest.py
visualizer/: index.html
visualizer/data/: world_capitals.js
visualizer/js/: app.js  bundle-catalog-controller.js  config.js  country-codes.js  cs2-bundle-identity.js  cs2-command-builder.js  cs2-helper-ui.js  cs2-map-helper.js  cs2-overlay-controller.js  data-adapter.js  location-navigator.js  map-controller.js  overlay-exporter.js  pack-loader.js  panel-controller.js  safe-html.js  services-controller.js  stats.js
visualizer/styles/: app.css  tokens.css
