[project]
name = "cs2-realmap-generator"
version = "1.0.0"
description = "Générateur de bundles OpenStreetMap pour Cities: Skylines II"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "tqdm>=4.66.0",
]

[project.scripts]
extract-zoning = "extract_zoning:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
py-modules = ["extract_zoning"]
